--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,7 +5,7 @@
   "author": "zouming <zouming@yunshangnc.com>",
   "homepage": "https://github.com/zouxiaomingya/yiliu-cli-dev#readme",
   "license": "ISC",
-  "main": "lib/core.js",
+  "main": "lib/index.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -22,5 +22,9 @@
   },
   "bugs": {
     "url": "https://github.com/zouxiaomingya/yiliu-cli-dev/issues"
+  },
+  "dependencies": {
+    "@yiliu-cli-dev/utils": "^1.0.0"
+    
   }
 }
