--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -5,7 +5,7 @@
   "author": "zouxiaomingya <13870939865@163.com>",
   "homepage": "https://github.com/zouxiaomingya/yiliu-cli-dev#readme",
   "license": "ISC",
-  "main": "lib/utils.js",
+  "main": "lib/index.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -22,5 +22,6 @@
   },
   "bugs": {
     "url": "https://github.com/zouxiaomingya/yiliu-cli-dev/issues"
-  }
+  },
+  "dependencies": {}
 }
