--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yiliu-cli-dev/core",
-  "version": "1.0.2",
+  "version": "1.0.0",
   "description": "> TODO: description",
   "author": "zouming <zouming@yunshangnc.com>",
   "homepage": "https://github.com/zouxiaomingya/yiliu-cli-dev#readme",
@@ -28,5 +28,6 @@
   },
   "dependencies": {
     "@yiliu-cli-dev/utils": "^1.0.1"
-  }
+  },
+  "gitHead": "eb13dc195b9e09d51fda4415a73d1c5c9cf24bdb"
 }
